# MoneyMan

./: .gitignore  CONTRIBUTING.md  LIMITATIONS.md  README.md  RULES.md  app_map.md  base_views.html  features.md  input_validation.md  onboarding_improvement.md  screens_description.md  test_users.csv  user_flow.md  ux_improvements.md
.github/workflows/: python-tests.yml
Artifacts/: DEV_TODO.md  PRD.md  TRD.md
WebApp/: app.py  db.py  pyproject.toml  requirements.txt  start_prod.sh  test_app.py
WebApp/templates/: add_transaction.html  ai_analysis.html  base.html  budgets.html  dashboard.html  edit_transaction.html  emi.html  goals.html  learn.html  login.html  onboarding.html  profile.html  settings.html  transactions.html
