[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "blinker==1.9.0",
    "cffi==2.1.0",
    "click==8.4.2",
    "coverage==7.15.2",
    "flask==3.1.3",
    "flask-cors==6.0.5",
    "gunicorn==26.0.0",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==26.2",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "werkzeug==3.1.8",
]
